resolved url-loader problem

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Wild Gun Man</title>
+		<link rel="stylesheet" href="dist/style.css" media="screen" title="no title" charset="utf-8">
 	</head>
 	<body>
 		<section id="canvas" class="canvas canvas-light">
 			<div id="winLose" class="winLose"></div>
 			<div id="myStats" class="myStats">time 00.00</div>
 			<div id="points" class="points">points 0</div>
-			<!-- <div id="lives" class="lives">lives 3</div> -->
 			<div id="opponentStats" class="opponentStats"></div>
 		</section>
-		<script src="dist/bundle.js" charset="utf-8"></script>
+		<script src="./dist/bundle.js" charset="utf-8"></script>
 
 	</body>
 </html>
