--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Wild Gun Man</title>
+		<link rel="shortcut icon" href="dist/images/icon.ico">
 		<link rel="stylesheet" href="dist/style.css" media="screen" title="no title" charset="utf-8">
 	</head>
 	<body>
 		<section id="canvas" class="canvas canvas-light">
+			<div id="options" class="options"></div>
 			<div id="winLose" class="winLose"></div>
-			<div id="myStats" class="myStats">time 00.00</div>
-			<div id="points" class="points">points 0</div>
-			<div id="opponentStats" class="opponentStats"></div>
+			<div id="gameTime" class="gameTime">Time 0.00</div>
+			<div id="lives" class="lives">Lives 3</div>
+			<div id="points" class="points">Points 00000</div>
+			<div id="oppEndTimes" class="oppEndTimes"></div>
 		</section>
 		<script src="./dist/bundle.js" charset="utf-8"></script>
 
