--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset='utf-8'>
 		<title>Wild Gun Man</title>
-		<link rel="shortcut icon" href="dist/images/icon.ico">
-		<link rel="stylesheet" href="dist/style.css" media="screen" title="no title" charset="utf-8">
+		<link rel='shortcut icon' href='dist/images/icon.ico'>
+		<link rel='stylesheet' href='dist/style.css' media='screen' title='no title' charset='utf-8'>
 	</head>
 	<body>
-		<section id="canvas" class="canvas canvas-light">
-			<div id="options" class="options"></div>
-			<div id="winLose" class="winLose"></div>
-			<div id="gameTime" class="gameTime">Time 0.00</div>
-			<div id="lives" class="lives">Lives 3</div>
-			<div id="points" class="points">Points 00000</div>
-			<div id="oppEndTimes" class="oppEndTimes"></div>
+		<section id='canvas' class='canvas canvas-light'>
+			<div id='options' class='options'></div>
+			<div id='winLose' class='winLose'></div>
+			<div id='gameTime' class='gameTime'>Time 0.00</div>
+			<div id='lives' class='lives'>Lives 3</div>
+			<div id='points' class='points'>Points 00000</div>
+			<div id='oppEndTimes' class='oppEndTimes'></div>
 		</section>
-		<script src="./dist/bundle.js" charset="utf-8"></script>
+		<script src='./dist/bundle.js' charset='utf-8'></script>
 
 	</body>
 </html>
